tests/miz/pass/types/pass_type_elaboration_local_mode_chain_expansion_001.miz
definition
  mode BaseModeDef: BaseMode is set;
end;

definition
  mode ChainModeDef: ChainMode is BaseMode;
end;

reserve z for ChainMode;
