tests/miz/fail/types/fail_type_elaboration_argument_bearing_mode_gap_001.miz
definition
  mode ElementDef: Element of a is set;
end;

reserve e for Element of a;
